# dune-monorepo-bench

./: Dockerfile.x64  Makefile  README.md  bench.Dockerfile  bench.Dockerfile.old  dune  dune.all  test.json  x.opam  x.opam.locked
bench/: Makefile  dune
bench/patches/: camltc.diff  hacl-star.diff  ocaml-csv.diff  owl_opt.diff
patches/: OSCADml.diff  albatross.diff  archetype-lang.diff  aws-s3.diff  bastet-async.diff  bastet-lwt.diff  bastet.diff  biocaml.diff  elpi.diff  lambda-streams.diff  lilac.diff  ocaml-aws.diff  ocaml-bigstring.diff  ocaml-crlibm.diff  ocaml-gstreamer.diff  ocaml-junit.diff  ocaml-jupyter.diff  ocaml-opus.diff  ocaml-qbf.diff  ocaml-solidity.diff  randoml.diff  resource-pooling.diff
x64/: Makefile  x.opam.locked
x64/patches/: alg_structs.diff  caisar.diff  curses.diff  ocaml-dap.diff  ocaml-mindstorm.diff  ocaml-mock.diff  ocaml-mustache.diff  pg_query-ocaml.diff
