opam-version: "2.0"
maintainer:   "stephen@sherra.tt"
authors:      ["Stephen Sherratt"]
license:      "ISC"
homepage:     "https://github.com/gridbugs/dune-monorepo-bench"
bug-reports:  "https://github.com/gridbugs/dune-monorepo-bench/issues"
dev-repo:     "git+https://github.com/gridbugs/dune-monorepo-bench"
depends: []
synopsis: """
benchmark test
"""
description: """
benchmark test
"""
